# archie-aes-example

./: .gitmodules  CMakeLists.txt  README.md  fault.json  qemuconf.json  startcmake
binary/: example-aes.elf  example-aes.lst
linker/: libopencm3_stm32f0.ld
src/: aesTest.c  aesTest.h  main.c  usart1.c  usart1.h
